--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -28,11 +28,12 @@
     background-color: rgb(6, 210, 6);
     color: white;
     border: none;
-    height: 40px;
+    height: 35px;
     margin-right: 30px;
     padding-right: 20px;
     padding-left: 20px;
-    border-radius: 50px;
+    border-radius: 5px;
+    font-weight: 600;
     cursor: pointer;
 }
 
@@ -41,37 +42,39 @@
 }
 
 .Btn:hover{
-    background-color: rgba(255, 0, 30, 0.778);
+    background-color: #243A5A;
 }
 
 .Btn {
-    background-color: rgb(255, 0, 30);
+    background-color: #243A5A;
     color: white;
     border: none;
-    height: 40px;
+    height: 35px;
     margin-right: 30px;
     padding-right: 20px;
     padding-left: 20px;
-    border-radius: 50px;
+    border-radius: 5px;
     cursor: pointer;
+    font-weight: 600;
 }
 
-.button {
+/* .button {
     position: relative;
     overflow: hidden;
     height: 3rem;
     padding: 0 2rem;
-    border-radius: 1.5rem;
+    border-radius: 0.1rem;
     background: #3d3a4e;
     background-size: 400%;
     color: #fff;
     border: none;
     cursor: pointer;
-  }
+    outline: red solid 1px;
+  } */
   
-  .linksCon button:hover::before {
+  /* .linksCon button:hover::before {
     transform: scaleX(1);
-  }
+  } */
   
   .btn {
     position: relative;
@@ -82,7 +85,7 @@
     position: relative;
     z-index: 1;
   }
-  
+/*   
   .linksCon button::before {
     content: "";
     position: absolute;
@@ -100,7 +103,7 @@
     );
     color: #fff;
     transition: all 0.475s;
-  }
+  } */
   
 
 
